💅 Invoice # wrapping fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -100,6 +100,10 @@ input {
 		border-radius: 0.25em;
 	}
 }
+#invoice_number {
+	width: 5em;
+	font-weight: bold;
+}
 
 #meta {
 	display: flex;
